# multi-format-audio-reader

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
backend/: audio_export.py  install-optional.ps1  ocr.py  pyproject.toml  server.py
backend/engines/: __init__.py  base.py  edge_engine.py  kokoro_engine.py
backend/reader_tts_sidecar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
resources/dict/: README.md
samples/: test.epub  test.md
src/main/: dictionary.ts  index.ts  sidecar.ts  store.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  i18n.ts  main.tsx  store.ts  styles.css
src/renderer/src/components/: HoverDict.tsx  Library.tsx  NotesPanel.tsx  SearchPanel.tsx  SettingsPanel.tsx  TocPanel.tsx  VocabPanel.tsx
src/renderer/src/readers/: EpubReader.tsx  MarkdownReader.tsx  PdfReader.tsx  highlightUtil.ts  textWrap.ts  types.ts
src/renderer/src/tts/: player.ts  segmenter.ts  ttsClient.ts
